[project]
name = "pipeline-dependency-analyzer-mvp"
version = "0.1.0"
description = "A minimal dependency analyzer for RADAR Services automation pipelines."
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.0"
]

[project.scripts]
pipeline-dependency = "pipeline_dependency_analyzer.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
